2018-07-22  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* trig.tcl: Implementation of (additional) trigonometric functions - package math::trig
	* trig.test: Trst for the (additional) trigonometric functions
	* trig.man: Documentation for the (additional) trigonometric functions
	* pkgIndex.tcl: Add the new package

2018-07-19  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* math_geometry.man: Describe the new criterium

2018-06-23  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* geometry_circle.tcl: Use the mean radius as criterium for touching circles (suggestion Andreas Kupries)

2018-06-18  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* geometry_circle.tcl: New source file with circle procedures
	* geometry.tcl: Added [source] statement for the new file, bumped version to 1.3.0
	* math_geometry.man: Description of the new procedures
	* geometry.test: Tests for the new procefures
	* pkgIndex.tcl: Version of math::geometry

2018-01-26  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* pdf_stat.tcl: Add a new procedure, bootstrap
	* statistics.test: Add tests for the bootstrap procedure
	* statistics.man: Add description of the bootstrap procedure
	* statistics.tcl: Change the version number for the statistics package (1.2.0)
	* pkgIndex.tcl: Change the version number for the statistics package

2018-01-07  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* pca.tcl: New package PCA, principal components analysis
	* pca.man: DoOcumentation for the PCA package
	* pca.test: Tests for the PCA package
	* pkgIndex.tcl: Add the package require command for the PCA package
2017-10-06  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* mvlinreg.tcl: Special case for zero variation - then the correlation coefficient should be 1.0
	* statistics.test: Test that mv-ols is well behaved if the variation in the dependent variable is zero (ticket 51c03aac1a45161ab6cc59afb69d1768175e054c)
	* statistics.tcl: Bumped the version to 1.1.1